<?xml version="1.0"?>
<package format="2">
  <name>demo_pkg</name>
  <version>0.1.0</version>
  <description>Demo package for Jenkins CI/CD pipeline testing</description>
  <maintainer email="malcom@example.com">Malcom</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
